fix some steps