@@ -19,6 +19,7 @@ import org.elasticsearch.index.engine.Segment;
 import org.elasticsearch.test.ESTestCase;
 
 import java.util.Collections;
+import java.util.List;
 
 import static org.elasticsearch.common.xcontent.XContentFactory.jsonBuilder;
 
@@ -33,8 +34,7 @@ public class IndicesSegmentResponseTests extends ESTestCase {
         segment.segmentSort = new Sort(sortField);
 
         ShardSegments shardSegments = new ShardSegments(shardRouting, Collections.singletonList(segment));
-        IndicesSegmentResponse response =
-            new IndicesSegmentResponse(new ShardSegments[] { shardSegments }, 1, 1, 0, Collections.emptyList());
+        IndicesSegmentResponse response = new IndicesSegmentResponse(List.of(shardSegments), 1, 1, 0, Collections.emptyList());
         try (XContentBuilder builder = jsonBuilder()) {
             response.toXContent(builder, ToXContent.EMPTY_PARAMS);
         }
